[package]
name = "pythagors"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-serenity = "0.53.0"
shuttle-runtime = { version = "0.54.0", default-features = false }
serenity = { version = "0.12.4", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = "1.44.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
string_template = "0.2.1"
serde_json = "1.0.140"
