[package]
name = "pythagors"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.4", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
string_template = "0.2.1"
serde_json = "1.0.145"
serde = "1.0.228"
toml = "0.9.10"
