[package]
name = "pythagors"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
string_template = "0.2.1"
serde_json = "1.0.149"
serde = "1.0.228"
toml = "0.9.11"
